--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Display PDFs in your React app as easily as if they were images.",
   "main": "dist/umd/entry.js",
   "module": "dist/esm/entry.js",
+  "types": "dist/entry.d.ts",
   "source": "src/entry.js",
   "scripts": {
-    "build": "yarn build-js-all && yarn copy-styles",
+    "build": "yarn build-js-all && yarn copy-styles && yarn build-types",
     "build-js-all": "yarn build-js-esm && yarn build-js-umd",
     "build-js-esm": "BABEL_ENV=production-esm babel src -d dist/esm --ignore \"**/*.spec.js,**/*.spec.jsx\"",
     "build-js-umd": "BABEL_ENV=production-umd babel src -d dist/umd --ignore \"**/*.spec.js,**/*.spec.jsx\"",
+    "build-types": "tsc",
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
     "jest": "jest",
     "jest-coverage": "jest --coverage",
-    "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
+    "lint": "eslint sample/ src/ test/ --ext .jsx,.js,.ts,.tsx",
     "prepack": "yarn clean && yarn build",
     "test": "yarn lint && yarn jest"
   },
@@ -86,6 +88,12 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.0",
+    "@babel/preset-typescript": "^7.16.5",
+    "@types/jest": "^27.0.3",
+    "@types/prop-types": "^15.7.4",
+    "@types/react": "^17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-eslint": "^10.0.0",
     "enzyme": "^3.10.0",
@@ -95,6 +103,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "rimraf": "^3.0.0",
+    "typescript": "^4.5.4",
     "webpack": "^5.20.0"
   },
   "peerDependencies": {
