--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,14 +7,15 @@
   "extends": [
     "wojtekmaj/react",
     "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
     "plugin:import/typescript"
   ],
   "settings": {
     "import/resolver": {
-       "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"],
-          "moduleDirectory": ["node_modules", "src/"]
-        }
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
   },
   "rules": {
@@ -22,6 +23,7 @@
     "react/sort-comp": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": "error",
+    "import/no-unresolved": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -31,7 +33,8 @@
         "ts": "never",
         "tsx": "never"
       }
-   ]
+   ],
+   "@typescript-eslint/no-empty-function": "off"
   },
   "overrides": [
     {
@@ -52,7 +55,17 @@
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-this-alias": "off",
-        "@typescript-eslint/no-use-before-define": "off"
+        "@typescript-eslint/no-use-before-define": "off",
+        "import/extensions": [
+          "error",
+          "ignorePackages",
+          {
+            "js": "never",
+            "jsx": "never",
+            "ts": "never",
+            "tsx": "never"
+          }
+       ]
       }
     }
   ]
